// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render with many props assigned 1`] = `
<div
  className="Badge test-class"
>
  <div
    className="iconContainer"
  >
    <svg />
  </div>
  <span
    className="label"
  >
    Badge Icon
  </span>
</div>
`;

exports[`Badge should render with required props 1`] = `
<div
  className="Badge"
>
  <div
    className="iconContainer"
  >
    <svg />
  </div>
  <span
    className="label"
  >
    Testing
  </span>
</div>
`;
